2006-02-16  Tomas Junnonen  <tomas.junnonen@nokia.com>

	* gtk/gtkimcontext.c
	* gtk/gtkimcontext.h
	* gtk/gtkimmulticontext.c: Added "hildon_gtk_im_context_filter_event"
	function
	* gtk/gtktextview.c (gtk_text_view_button_release_event)
	(gtk_text_view_button_press_event): Filter button events with
	imcontext
	* gtk/gtkentry.c (gtk_entry_button_press) (gtk_entry_button_release):
	Filter button events with imcontext

2006-01-31  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* configure.in (LIBTOOL_EXPORT_OPTIONS): Temporarily export a couple
	of private symbols (_gtk_button_set_depressed,
	_gtk_file_chooser_install_properties, _gtk_file_system_create) to work
	around broken hildon.
	* gtk/gtkfilechooserutils.[ch]
	(hildon_gtk_file_chooser_install_properties): Added
	* gtk/gtkbutton.[ch] (hildon_gtk_button_set_depressed): Added

2006-01-31  Mohammad Anwari  <mohammad.anwari@nokia.com>
	
	IM context extension redesigned.

	Added "hildon-input-mode" property and related code:

	* gtk/gtktextview.h
	* gtkentry.h
	* gtk/gtktextview.c (gtk_text_view_class_init)
	(gtk_text_view_set_property) (gtk_text_view_get_property)
	(hildon_gtk_text_view_set_input_mode)
	(hildon_gtk_text_view_get_input_mode) (gtk_text_view_init),
	* gtk/gtkentry.c (gtk_entry_class_init)
	(_gtk_input_mode_convert_old_to_new)
	(_gtk_input_mode_convert_new_to_old) (gtk_entry_set_property)
	(gtk_entry_get_property) (gtk_entry_init)
	(hildon_gtk_entry_set_input_mode) (hildon_gtk_entry_get_input_mode):
	Added "hildon_input_mode" property and deprecated "input_mode" and
	"autocap" properties.
	* gtk/gtkentry.c (hildon_gtk_input_mode_is_valid_char)
	(gtk_entry_filter_text): Rewrote character validation code. Removed
	g_unichar_*() functions that before were used for the validation.
	* gtk/gtkimmulticontext.c (gtk_im_multicontext_set_property)
	(gtk_im_multicontext_get_property) (gtk_im_multicontext_class_init)
	(gtk_im_multicontext_set_slave) (gtk_im_multicontext_notify)